--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>MineDude.site</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" sizes="192x192" href="img/icon.jpg">
   </head>
   <style>
     a.one:link {color:#000000;text-decoration:none;}
