--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>MineDude.site</title>
+    <title>Games</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" sizes="192x192" href="img/icon.jpg">
   </head>
