--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a class="one" href="http://cookieclicker.minedude.site" target="_blank">Cookie Clicker</a></li>
             <li><a class="one" href="http://fnf.minedude.site" target="_blank">Friday Night Funkin'</a></li>
             <li><a class="one" href="http://basketball.minedude.site" target="_blank">Basketball Stars</a></li>
+              <li><a class="one" href="http://dino.minedude.site" target="_blank">Chrome Dino Game</a></li>
           </ul>
         </div>
       </div>
