--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <li><a class="one" href="http://cookieclicker.minedude.site" target="_blank">Cookie Clicker</a></li>
             <li><a class="one" href="http://fnf.minedude.site" target="_blank">Friday Night Funkin'</a></li>
             <li><a class="one" href="http://basketball.minedude.site" target="_blank">Basketball Stars</a></li>
-              <li><a class="one" href="http://dino.minedude.site" target="_blank">Chrome Dino Game</a></li>
+            <li><a class="one" href="http://dino.minedude.site" target="_blank">Chrome Dino Game</a></li>
+            <li><a class="one" href="http://tetris.minedude.site" target="_blank">Tetris</a></li>
           </ul>
         </div>
       </div>
