--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 </div>
 
   <script>
-  var username = ${{secret.USERNAME}}
-  var password = ${{secret.PASSWORD}}
   function validateForm() {
     let x = document.forms["Login"]["fname"].value;
     let y = document.forms["Login"]["fpass"].value;
+    let username = ${{secret.USERNAME}}
+    let password = ${{secret.PASSWORD}}
     if (x == username && y == password) {
       window.location.replace("Kz-PrNZQ6wc3XFMedwD!.html");
     }
