--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   function validateForm() {
     let x = document.forms["Login"]["fname"].value;
     let y = document.forms["Login"]["fpass"].value;
-    let username = ${{secret.USERNAME}}
-    let password = ${{secret.PASSWORD}}
+    let username = ${{secret.USERNAME}};
+    let password = ${{secret.PASSWORD}};
     if (x == username && y == password) {
       window.location.replace("Kz-PrNZQ6wc3XFMedwD!.html");
     }
