--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
   function validateForm() {
     let x = document.forms["Login"]["fname"].value;
     let y = document.forms["Login"]["fpass"].value;
-    let username = ${{secret.USERNAME}};
-    let password = ${{secret.PASSWORD}};
-    if (x == username && y == password) {
+    if (x == "idontreallycare" && y == "goplaysomegames") {
       window.location.replace("Kz-PrNZQ6wc3XFMedwD!.html");
     }
   }
