--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     let x = document.forms["Login"]["fname"].value;
     let y = document.forms["Login"]["fpass"].value;
     if (x == "idontreallycare" && y == "goplaysomegames") {
-      window.location.replace("Kz-PrNZQ6wc3XFMedwD!");
+      window.location.replace("Kz-PrNZQ6wc3XFMedwD!.html");
     }
   }
   </script>
