--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html class="staticrypt-html">
 <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <link rel="icon" sizes="192x192" href="icon.png">
+    <title>Games</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- do not cache this page -->
