--- a/index.html
+++ b/index.html
@@ -6173,7 +6173,7 @@
 
         var plainHTML = decrypt(encryptedHTML, passphrase);
 
-        window.location = "games.html"
+        window.location = "games"
         document.close();
     });
 </script>
