--- a/games.html
+++ b/games.html
@@ -18,7 +18,7 @@
       <div class="content">
         <div>
           <ul>
-            <li><a class="one" href="RetroBowl/index.html" target="_blank">RetroBowl</a></li>
+            <li><a class="one" href="games.minedude.site/retrobowl" target="_blank">RetroBowl</a></li>
             <li><a class="one" href="slope/index.html" target="_blank">Slope</a></li>
             <li><a class="one" href="cookieclicker3/index.html" target="_blank">Cookie Clicker</a></li>
             <li><a class="one" href="fnf/index.html" target="_blank">Friday Night Funkin'</a></li>
