--- a/games.html
+++ b/games.html
@@ -18,12 +18,12 @@
       <div class="content">
         <div>
           <ul>
-            <li><a class="one" href="games.minedude.site/retrobowl" target="_blank">RetroBowl</a></li>
+            <li><a class="one" href="/retrobowl" target="_blank">RetroBowl</a></li>
             <li><a class="one" href="slope/index.html" target="_blank">Slope</a></li>
             <li><a class="one" href="cookieclicker3/index.html" target="_blank">Cookie Clicker</a></li>
             <li><a class="one" href="fnf/index.html" target="_blank">Friday Night Funkin'</a></li>
             <li><a class="one" href="BasketballStars/index.html" target="_blank">Basketball Stars</a></li>
-            <li><a class="one" href="ChromeDinoGame/index.html" target="_blank">Chrome Dino Game</a></li>
+            <li><a class="one" href="/dino" target="_blank">Chrome Dino Game</a></li>
             <li><a class="one" href="tetris/index.html" target="_blank">Tetris</a></li>
           </ul>
         </div>
