--- a/games.html
+++ b/games.html
@@ -19,12 +19,12 @@
         <div>
           <ul>
             <li><a class="one" href="/retrobowl" target="_blank">RetroBowl</a></li>
-            <li><a class="one" href="slope/index.html" target="_blank">Slope</a></li>
-            <li><a class="one" href="cookieclicker3/index.html" target="_blank">Cookie Clicker</a></li>
-            <li><a class="one" href="fnf/index.html" target="_blank">Friday Night Funkin'</a></li>
-            <li><a class="one" href="BasketballStars/index.html" target="_blank">Basketball Stars</a></li>
+            <li><a class="one" href="/slope/" target="_blank">Slope</a></li>
+            <li><a class="one" href="/cookieclicker/" target="_blank">Cookie Clicker</a></li>
+            <li><a class="one" href="/fnf/" target="_blank">Friday Night Funkin'</a></li>
+            <li><a class="one" href="/basketball/" target="_blank">Basketball Stars</a></li>
             <li><a class="one" href="/dino" target="_blank">Chrome Dino Game</a></li>
-            <li><a class="one" href="tetris/index.html" target="_blank">Tetris</a></li>
+            <li><a class="one" href="/tetris/" target="_blank">Tetris</a></li>
           </ul>
         </div>
       </div>
