--- a/games.html
+++ b/games.html
@@ -33,4 +33,8 @@
     </div>
 
   </body>
+
+  <script>
+      document.addEventListener('contextmenu', event => event.preventDefault());
+  </script>
 </html>
