--- a/index.html
+++ b/index.html
@@ -6178,4 +6178,7 @@
     });
 </script>
 </body>
+<script>
+	document.addEventListener('contextmenu', event => event.preventDefault());
+</script>
 </html>
