--- a/index.html
+++ b/index.html
@@ -6173,7 +6173,7 @@
 
         var plainHTML = decrypt(encryptedHTML, passphrase);
 
-        window.location = "games"
+        <iframe src="games" width="1000" height="1000"  frameborder="0"></iframe>
         document.close();
     });
 </script>
