--- a/index.html
+++ b/index.html
@@ -6173,7 +6173,7 @@
 
         var plainHTML = decrypt(encryptedHTML, passphrase);
 
-        <iframe src="games" width="1000" height="1000"  frameborder="0"></iframe>
+        <iframe src='/games/' style="display:block; border:none; height:100vh; width:100%;"></iframe>
         document.close();
     });
 </script>
