--- a/index.html
+++ b/index.html
@@ -6173,7 +6173,7 @@
 
         var plainHTML = decrypt(encryptedHTML, passphrase);
 
-        <iframe src='games.html' style="display:block; border:none; height:100vh; width:100%;"></iframe>
+        window.location='/games/';
         document.close();
     });
 </script>
