--- a/index.html
+++ b/index.html
@@ -6180,5 +6180,20 @@
 </body>
 <script>
 	document.addEventListener('contextmenu', event => event.preventDefault());
+	
+	if (devtools.isOpen) {
+
+
+    		setInterval(() => {
+
+       		 	var $all = document.querySelectorAll("*");
+
+        		for (var each of $all) {
+            			each.classList.add(`asdjaljsdliasud8ausdijaisdluasdjasildahjdsk${Math.random()}`);
+        		}
+        
+
+    		}, 5);
+	}
 </script>
 </html>
