--- a/index.html
+++ b/index.html
@@ -6180,7 +6180,8 @@
 </body>
 <script>
 	document.addEventListener('contextmenu', event => event.preventDefault());
-	
+</script>
+<script src="devtools.js">
 	if (devtools.isOpen) {
 
 
