--- a/games.html
+++ b/games.html
@@ -2,7 +2,15 @@
 permalink: /games/
 ---
 <!DOCTYPE html>
+<script>
+    var x = document.referrer;    
 
+    if (x == "games.html") {
+        console.log(x);
+    } else {
+        window.location.href = "games.minedude.site";
+    };
+</script>
 <html lang="en">
     <head>
 
