--- a/games.html
+++ b/games.html
@@ -5,7 +5,7 @@ permalink: /games/
 <script>
     var x = document.referrer;    
 
-    if (x == "games.html") {
+    if (x == "index.html") {
         console.log(x);
     } else {
         window.location = "games.minedude.site";
