--- a/games.html
+++ b/games.html
@@ -8,7 +8,7 @@ permalink: /games/
     if (x == "games.minedude.site") {
         console.log(x);
     } else {
-        window.location.replace = "games.minedude.site";
+        window.location.href = "games.minedude.site";
     };
 </script>
 <html lang="en">
