--- a/RetroBowl/index.html
+++ b/RetroBowl/index.html
@@ -2,6 +2,15 @@
 permalink: /retrobowl/
 ---
 <!DOCTYPE html>
+<script>
+    var x = document.referrer;    
+
+    if (x == "games.minedude.site/games") {
+        console.log(x);
+    } else {
+        window.location.href = "/";
+    };
+</script>
 <html lang="en">
     <head>
         
