--- a/games.html
+++ b/games.html
@@ -5,7 +5,7 @@ permalink: /games/
 <script>
     var x = document.referrer;    
 
-    if (x == "/") {
+    if (x == "games.minedude.site") {
         console.log(x);
     } else {
         window.location.href = "/";
