Improved Refer check
Accept these changes, if they don't work, just take them back out

--- a/games.html
+++ b/games.html
@@ -2,6 +2,16 @@
 permalink: /games/
 ---
 <!DOCTYPE html>
+<script>
+    var x = document.referrer;    
+
+    if (x == "https://games.minedude.site/") {
+        console.log(x);
+        window.loaction.href = "https://games.minedude.site/games/";
+    } else {
+        window.location.href = "https://games.minedude.site/";
+    };
+</script>
 <html lang="en">
     <head>
 
@@ -20,12 +30,12 @@ permalink: /games/
       <div class="content">
         <div>
           <ul>
-            <li><a class="one" href="/retrobowl/" target="_blank">RetroBowl</a></li>
+            <li><a class="one" href="/retrobowl" target="_blank">RetroBowl</a></li>
             <li><a class="one" href="/slope/" target="_blank">Slope</a></li>
             <li><a class="one" href="/cookieclicker/" target="_blank">Cookie Clicker</a></li>
             <li><a class="one" href="/fnf/" target="_blank">Friday Night Funkin'</a></li>
             <li><a class="one" href="/basketball/" target="_blank">Basketball Stars</a></li>
-            <li><a class="one" href="/dino/" target="_blank">Chrome Dino Game</a></li>
+            <li><a class="one" href="/dino" target="_blank">Chrome Dino Game</a></li>
             <li><a class="one" href="/tetris/" target="_blank">Tetris</a></li>
           </ul>
         </div>
